style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');

canvas {
  position: fixed;
  top: 0;
  left: 0;
  opacity: 0%;
}

body {
  background:#262626;
}

main {
  position: absolute;
  color: white;
  display: none;
  margin: 20px;
}

h1, h2, h3 {
  font-family: 'Josefin Sans', sans-serif;
  font-weight: 900;
}
h1 {
  font-size: 47px;
  margin-top: 0;
}
h2 {
  font-size: 25px;
}
p, span, a {
  font-family: 'Josefin Sans', sans-serif;
  font-weight: 400;
}

.toast {
  font-family: sans-serif;
}

#mouse {
  position: relative;
  animation-name: mouse;
  animation-duration: 2s;
  animation-iteration-count: infinite;
}
@keyframes mouse {
  0%{bottom: 0px;}
  40%{bottom: 10px;}
  100%{bottom: 0px;}
}

.blinking-cursor {
  display: inline-block;
  font-size: 60px;
  width: 2px;
  animation: 1s blink step-end infinite;
  margin-left: 5px;
}
@keyframes blink {
  from, to {
    background-color: transparent;
  }
  50% {
    background-color: white;
  }
}

.button {
  background-color: white;
  text-decoration: none;
  color: black;
  padding: 8px;
  border-radius: 10px;
}

#at {
  line-height: 40px;
}

#load {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.ring
{
  position:absolute;
  top:50%;
  left:50%;
  transform:translate(-50%,-50%);
  width:150px;
  height:150px;
  background:transparent;
  border:3px solid #3c3c3c;
  border-radius:50%;
  text-align:center;
  line-height:150px;
  font-family:sans-serif;
  font-size:20px;
  color:#fff000;
  letter-spacing:4px;
  text-transform:uppercase;
  text-shadow:0 0 10px #fff000;
  box-shadow:0 0 20px rgba(0,0,0,.5);
}
.ring:before
{
  content:'';
  position:absolute;
  top:-3px;
  left:-3px;
  width:100%;
  height:100%;
  border:3px solid transparent;
  border-top:3px solid #fff000;
  border-right:3px solid #fff000;
  border-radius:50%;
  animation:animateC 2s linear infinite;
}
span#dot
{
  display:block;
  position:absolute;
  top:calc(50% - 2px);
  left:50%;
  width:50%;
  height:4px;
  background:transparent;
  transform-origin:left;
  animation:animate 2s linear infinite;
}
span#dot:before
{
  content:'';
  position:absolute;
  width:16px;
  height:16px;
  border-radius:50%;
  background:#fff000;
  top:-6px;
  right:-8px;
  box-shadow:0 0 20px #fff000;
}
@keyframes animateC
{
  0%
  {
    transform:rotate(0deg);
  }
  100%
  {
    transform:rotate(360deg);
  }
}
@keyframes animate
{
  0%
  {
    transform:rotate(45deg);
  }
  100%
  {
    transform:rotate(405deg);
  }
}

.topbar {
  position: fixed;
  top: 0px;
  left: 0px;
  width: calc(100vw - 40px);
  display: flex;
  background-color: transparent;
  padding: 20px;
  padding-bottom: 15px;
  justify-content: space-between;
  transition-duration: 0.5s;
  z-index: 20;
}

.topbar > * {
  margin: 0;
  line-height: 1;
}

.topbar > div > a {
  text-decoration: none;
  color: inherit;
}

.topbardot {
  opacity: 0.5;
}

.about {
  max-width: 600px;
}

.about > p {
  line-height: 1.3;
  font-size: 1.1em;
}

.monochrome {
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
}

.bottomright {
  position: fixed;
  right: 0px; bottom: 0px;
  padding: 10px;
}

.projects {
  display: flex;
  align-items: flex-start;
  gap: 10px;
  flex-wrap: wrap;
}

.project {
  backdrop-filter: blur(2px);
  width: fit-content;
  transition-duration: 0.5s;
  padding: 20px;
  padding-left: 15px;
  max-width: 200px;
}
.project > h3 {
  margin: 0;
  font-size: 24px;
}
.project > p {
  margin-top: 4px;
  margin-bottom: 15px;
}

@media (max-width: 550px) {
  .project {
    width: 100vw !important;
  }
}

.squidagram {
  border: #3588e3 2px solid;
  border-radius: 10px;
}
.squidagram:hover {
  background-color: #3588e3;
  border: #b5d9ff 2px solid;
}

.yt2music {
  border: red 2px solid;
  border-radius: 10px;
}
.yt2music:hover {
  background-color: red;
  border: rgb(255, 77, 77) 2px solid;
}

.mywebsite {
  border: #563E6C 2px solid;
  border-radius: 10px;
}
.mywebsite:hover {
  background-color: #563E6C;
  border: #6e5189 2px solid;
}

.steamstats {
border: #1e2a44 2px solid;
border-radius: 10px;
}
.steamstats:hover {
background-color: #1e2a44;
border: rgb(36, 51, 84) 2px solid;
}

/* This is from w3 tutorials */

/* Dropdown Button */
.dropbtn {
  background-color: transparent;
  font-size: inherit;
  font-family: 'Josefin Sans', sans-serif;
  color: inherit;
  border: none;
  padding: 0;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
  width: fit-content;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #272727;
  min-width: 160px;
  z-index: 1;
  right: 0;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: rgb(255, 255, 255);
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #585858;}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {display: block;}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {background-color: rgb(111, 111, 111);}

